add: historic data
