# api/main.go
@@ -36,6 +36,12 @@ type FullnodeDb struct {
 	Postal            string
 	Timezone          string
 }
+
+type NumNodesDb struct {
+	Count     int        `json:"count"`
+	CreatedAt *time.Time `json:"createdAt"`
+}
+
 type FullnodeApi struct {
 	Ip            string     `json:"ip"`
 	ClientVersion string     `json:"clientVersion"`
@@ -98,6 +104,7 @@ func main() {
 	router.GET("/fullnodes", getFullnodes)
 	router.GET("/versions", getVersions)
 	router.GET("/syncstatus", getSyncedStatus)
+	router.GET("/historic", getNumNodes)
 
 	// redict to index.html
 	router.GET("/docs", func(c *gin.Context) {
@@ -166,6 +173,24 @@ func getSyncedStatus(c *gin.Context) {
 
 	var countSync []SyncCount
 	result := dbHandler.Model(&FullnodeDb{}).Distinct("ip", "port").Select("is_synced, COUNT(*) as count").Group("is_synced").Order("count").Scan(&countSync)
+
+	if result.RowsAffected > 0 && result.Error == nil {
+		c.JSON(http.StatusOK, countSync)
+	} else {
+		fmt.Printf("Error getting count: %s\n", result.Error)
+		c.JSON(http.StatusOK, make([]string, 0))
+	}
+}
+
+// GetNumNodes godoc
+// @Summary Return number of nodes connected
+// @Tags fullnodes
+// @Produce json
+// @Success 200 {array} NumNodesDb
+// @Router /historic [get]
+func getNumNodes(c *gin.Context) {
+	var countSync []NumNodesDb
+	result := dbHandler.Model(&NumNodesDb{}).Limit(100).Find(&countSync)
 
 	if result.RowsAffected > 0 && result.Error == nil {
 		c.JSON(http.StatusOK, countSync)
